feat: Update swagger api. feat: 新增 私密頻道 UI.
