# fancyapi/src/main/java/com/cmoney/fanciapi/fanci/model/AccessorTypes.kt
@@ -1,0 +1,61 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.cmoney.fanciapi.fanci.model
+
+
+import com.squareup.moshi.Json
+
+/**
+ * 
+ *
+ * Values: role,users
+ */
+
+enum class AccessorTypes(val value: kotlin.String) {
+
+    @Json(name = "Role")
+    role("Role"),
+
+    @Json(name = "Users")
+    users("Users");
+
+    /**
+     * Override toString() to avoid using the enum variable name as the value, and instead use
+     * the actual value defined in the API spec file.
+     *
+     * This solves a problem when the variable name and its value are different, and ensures that
+     * the client sends the correct enum values to the server always.
+     */
+    override fun toString(): String = value
+
+    companion object {
+        /**
+         * Converts the provided [data] to a [String] on success, null otherwise.
+         */
+        fun encode(data: kotlin.Any?): kotlin.String? = if (data is AccessorTypes) "$data" else null
+
+        /**
+         * Returns a valid [AccessorTypes] for [data], null otherwise.
+         */
+        fun decode(data: kotlin.Any?): AccessorTypes? = data?.let {
+          val normalizedData = "$it".lowercase()
+          values().firstOrNull { value ->
+            it == value || normalizedData == "$value".lowercase()
+          }
+        }
+    }
+}
+
