# fancyapi/src/main/java/com/cmoney/fanciapi/fanci/model/Channel.kt
@@ -16,6 +16,7 @@
 package com.cmoney.fanciapi.fanci.model
 
 import com.cmoney.fanciapi.fanci.model.Category
+import com.cmoney.fanciapi.fanci.model.ChannelPrivacy
 import com.cmoney.fanciapi.fanci.model.ChannelType
 
 import com.squareup.moshi.Json
@@ -35,6 +36,7 @@ import kotlinx.parcelize.Parcelize
  * @param groupId 頻道所屬社團Id
  * @param category 
  * @param isPublic 是否為公開頻道
+ * @param privacy 
  */
 @Parcelize
 
@@ -77,7 +79,10 @@ data class Channel (
 
     /* 是否為公開頻道 */
     @Json(name = "isPublic")
-    val isPublic: kotlin.Boolean? = null
+    val isPublic: kotlin.Boolean? = null,
+
+    @Json(name = "privacy")
+    val privacy: ChannelPrivacy? = null
 
 ) : Parcelable
 
