# swagger.json
@@ -830,7 +830,7 @@
         "tags": [
           "Channel"
         ],
-        "summary": "新增更新 多個 頻道角色 __________🔒 指派頻道管理員",
+        "summary": "新增更新 多個管理員 到 頻道 __________🔒 指派頻道管理員",
         "parameters": [
           {
             "name": "channelId",
@@ -891,7 +891,7 @@
         "tags": [
           "Channel"
         ],
-        "summary": "從頻道移除 多個 角色 __________🔒 指派頻道管理員",
+        "summary": "從頻道移除 多個 管理員角色 __________🔒 指派頻道管理員",
         "parameters": [
           {
             "name": "channelId",
@@ -944,6 +944,298 @@
           {
             "oauth2": [
               "PERMISSION_指派頻道管理員_0_channelId_channelGroupId"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Channel/AccessType": {
+      "get": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "取得私密頻道權限設定文案\r\n提供權限類型，以及權限描述的文案",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelAccessOptionModel"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelAccessOptionModel"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelAccessOptionModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/Channel/{channelId}/WhiteList": {
+      "get": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "取得私密頻道白名單 __________🔒 編輯頻道",
+        "parameters": [
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelWhiteList"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelWhiteList"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelWhiteList"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "PERMISSION_編輯頻道_0_channelId_channelGroupId"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Channel/{channelId}/WhiteList/{authType}": {
+      "get": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "取得私密頻道白名單 __________🔒 編輯頻道",
+        "parameters": [
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authType",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChannelWhiteList"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChannelWhiteList"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChannelWhiteList"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "PERMISSION_編輯頻道_0_channelId_channelGroupId"
+            ]
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "設定私密頻道白名單 (Role/Users) __________🔒 編輯頻道",
+        "parameters": [
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "頻道ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authType",
+            "in": "path",
+            "description": "指定加入成員的權限類型)",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "PERMISSION_編輯頻道_0_channelId_channelGroupId"
+            ]
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Channel"
+        ],
+        "summary": "設定私密頻道白名單 (Role/Users) __________🔒 編輯頻道",
+        "parameters": [
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "頻道ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authType",
+            "in": "path",
+            "description": "指定加入成員的權限類型)",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AccessorParam"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "PERMISSION_編輯頻道_0_channelId_channelGroupId"
             ]
           }
         ]
@@ -1316,7 +1608,7 @@
             "schema": {
               "type": "integer",
               "format": "int64",
-              "default": 0
+              "default": 2147483647
             }
           },
           {
@@ -1825,7 +2117,7 @@
         "tags": [
           "Group"
         ],
-        "summary": "新增角色 __________🔒 新增角色",
+        "summary": "新增角色(管理員) __________🔒 新增角色",
         "parameters": [
           {
             "name": "groupId",
@@ -2368,6 +2660,14 @@
             "in": "path",
             "description": "社團id",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "description": "搜尋用戶暱稱的關鍵字",
             "schema": {
               "type": "string"
             }
@@ -4535,6 +4835,31 @@
   },
   "components": {
     "schemas": {
+      "AccessorParam": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "$ref": "#/components/schemas/AccessorTypes"
+          },
+          "ids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "可存取此頻道的RoleIds/UserId",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false,
+        "description": "設定自定義存取權限參數"
+      },
+      "AccessorTypes": {
+        "enum": [
+          "Role",
+          "Users"
+        ],
+        "type": "string"
+      },
       "ApplyStatus": {
         "enum": [
           "UnConfirmed",
@@ -4542,6 +4867,23 @@
           "Denied"
         ],
         "type": "string"
+      },
+      "AuthBulliten": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "icon": {
+            "type": "string",
+            "nullable": true
+          },
+          "isEnabled": {
+            "type": "boolean"
+          }
+        },
+        "additionalProperties": false
       },
       "BanParam": {
         "type": "object",
@@ -4702,10 +5044,38 @@
           "isPublic": {
             "type": "boolean",
             "description": "是否為公開頻道"
+          },
+          "privacy": {
+            "$ref": "#/components/schemas/ChannelPrivacy"
           }
         },
         "additionalProperties": false,
         "description": "頻道"
+      },
+      "ChannelAccessOptionModel": {
+        "type": "object",
+        "properties": {
+          "authType": {
+            "type": "string",
+            "nullable": true
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "icon": {
+            "type": "string",
+            "nullable": true
+          },
+          "bullitens": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AuthBulliten"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "ChannelPaging": {
         "type": "object",
@@ -4737,6 +5107,9 @@
             "type": "string",
             "description": "頻道名稱",
             "nullable": true
+          },
+          "privacy": {
+            "$ref": "#/components/schemas/ChannelPrivacy"
           }
         },
         "additionalProperties": false,
@@ -4775,11 +5148,42 @@
         },
         "additionalProperties": false
       },
+      "ChannelPrivacy": {
+        "enum": [
+          "Public",
+          "Private"
+        ],
+        "type": "string"
+      },
       "ChannelType": {
         "enum": [
           "ChatRoom"
         ],
         "type": "string"
+      },
+      "ChannelWhiteList": {
+        "type": "object",
+        "properties": {
+          "authType": {
+            "type": "string",
+            "nullable": true
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FanciRole"
+            },
+            "nullable": true
+          },
+          "users": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/User"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "ChatMessage": {
         "type": "object",
@@ -4959,6 +5363,9 @@
             "minLength": 1,
             "type": "string",
             "description": "頻道名稱"
+          },
+          "privacy": {
+            "$ref": "#/components/schemas/ChannelPrivacy"
           }
         },
         "additionalProperties": false,
@@ -5877,6 +6284,9 @@
           },
           "color": {
             "$ref": "#/components/schemas/RoleColor"
+          },
+          "isAdmin": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false,
